--- a/package.json
+++ b/package.json
@@ -3,16 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.15.1",
-    "web-vitals": "^2.1.4"
+    // ... your dependencies here
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +11,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  }
   "eslintConfig": {
     "extends": [
       "react-app",
