--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
